--- a/static_shared/ngTemplates/productCard.html
+++ b/static_shared/ngTemplates/productCard.html
@@ -38,6 +38,7 @@
           </div>
 
           <span style="font-size:15px;padding-left:10px"> Price :</span>
+          <!-- {{selectedProdVar}} -->
           <span ng-if="list.product.serialNo==selectedProdVar.sku">
             <span style="font-size:15px;">
               <span ng-if="list.product.discount>0" class="text-muted">
