--- a/PIM/static/ngTemplates/app.home.blog.html
+++ b/PIM/static/ngTemplates/app.home.blog.html
@@ -1,4 +1,4 @@
-<div class="shaddowed card bg-white" style="min-height:93vh;position:relative;">
+<div class="" style="min-height:93vh;position:relative;">
 
   <breadcrumb></breadcrumb>
   <div class="container-fluid" style="width:100%;position:relative;">
