--- a/ERP/static/ngTemplates/app.ERP.settings.html
+++ b/ERP/static/ngTemplates/app.ERP.settings.html
@@ -1,4 +1,4 @@
-<div class="shaddowed card bg-white " style="position:relative;min-height:93vh;">
+<div class=" " style="position:relative;min-height:95vh;">
   <div class="container-fluid" style="padding:0px;">
     <div class="col-md-10" style="padding:0px;">
       <div ui-view></div>
