--- a/PIM/static/ngTemplates/app.home.dashboard.html
+++ b/PIM/static/ngTemplates/app.home.dashboard.html
@@ -40,7 +40,7 @@
 </div>
 
 </div> -->
-<div class="shaddowed card bg-white" style="min-height:93vh;position:relative;">
+<div class="" style="min-height:93vh;position:relative;">
 
   <breadcrumb></breadcrumb>
     <div class="container-fluid">
