--- a/static_shared/ngTemplates/header.html
+++ b/static_shared/ngTemplates/header.html
@@ -1,27 +1,35 @@
-<nav class="navbar navbar-default navbar-fixed-top animated slideInDown" style="margin-left:13%;">
+<nav class="navbar navbar-default navbar-fixed-top animated slideInDown" id="navbarTop" style="{{sideMenuVisibility ? 'margin-left:13%': 'margin-left:5%;'}};{{mobileView ? 'margin-left:31%':''}}" >
   <div class="container-fluid" style="height:100%;">
-    <div class="navbar-header" style="padding-top:0.5vh;">
+    <div class="navbar-header"  style="height: 100%;">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navBar" aria-expanded="false" aria-controls="navbar">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" >
-        <img ng-src="{{brandLogo}}" height="40" style="margin-top:-10px;max-width:100px;" />
+
+      <a ng-click="toggleSideMenu()" class="navbar-brand" style="color:white;background:var(--themeMain);cursor:pointer;" >
+        <i style="margin-top:-10px;" class="fa fa-bars fa-2x"></i>
       </a>
-      <div class="navbar-brand" ><i class="fa fa-angle-right"></i> {{serviceName}}</div>
+
+      <!-- <a class="navbar-brand" href="/" style="margin-left:50px;">
+        <img ng-src="{{brandLogo}}" height="40" style="margin-top:-10px;max-width:100px;" />
+      </a> -->
+      <a class="navbar-brand" href="/" style="margin-left:10px;padding-top:0px;margin-top:-15px;color:white;">
+        <h1>24Tutors</h1>
+      </a>
+      <div class="navbar-brand" style="margin-right:30px;color:white"></div>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navBar" style="height:5vh;">
 
   		<!-- <ul class="nav navbar-nav" style="height:5vh;">
-  			<li style="height:100%;" ng-class="{active: $state.includes(m.name)}" ng-repeat="m in modules" ng-if="m.name.length > 0"><a style="padding-top:1.5vh;" ui-sref="{{m.name}}" ><i class="fa {{m.icon}}"></i> {{m.name | humanize}}</a></li>
+  			<li style="height:100%;" ng-class="{active: $state.includes(m.name)}" ng-repeat="m in modules"><a style="padding-top:1.5vh;" ui-sref="{{m.name}}" ><i class="fa {{m.icon}}"></i> {{m.name | humanize}}</a></li>
   		</ul> -->
 
   		<ul class="nav navbar-nav navbar-right" style="margin-right:20px;height:5vh;">
   			<li class="dropdown" style="height:100%;">
-  			  <a class="dropdown-toggle" style="padding-top:1.5vh;" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> {{me.url | getName}}  <span class="glyphicon glyphicon-chevron-down"></span></a>
+  			  <a class="dropdown-toggle" style="padding-top:1.5vh;color:white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> {{me.url | getName}}  <span class="glyphicon glyphicon-chevron-down"></span></a>
   			  <ul class="dropdown-menu">
     				<li><img class="img-responsive" width="200px" src="/static/images/userIcon.png" ng-src="{{me.profile.displayPicture}}" style="top:-5px; position:relative; width:200px"></li>
     				<li>
@@ -33,13 +41,13 @@
     				<li><a href="" ng-click="openSettings('right' , false , settings )"><i class="fa fa-gears fa-fw"></i> Settings</a></li>
             <li><a href="/logout"><i class="fa fa-sign-out fa-fw"></i> Logout</a></li>
     				<li role="separator" class="divider"></li>
-    				<li><a href="" ng-click="about()"> <i class="fa fa-info fa-fw"></i> About</a></li>
+    				<!-- <li><a href="" ng-click="about()"> <i class="fa fa-info fa-fw"></i> About</a></li> -->
   			  </ul>
   			</li>
   		</ul>
       <ul class = "nav navbar-nav navbar-right" style="height:5vh;">
-        <li class="dropdown" style="height:100%;" ng-if="showMessaging">
-          <a class="dropdown-toggle" data-toggle="dropdown" style="width:55px;padding-top:1.5vh;" role="button" aria-haspopup="true" aria-expanded="false">
+        <li class="dropdown" style="height:100%;">
+          <a ng-if="!isCustomer&&showw" class="dropdown-toggle" data-toggle="dropdown" style="width:55px;padding-top:1.5vh;color:white" role="button" aria-haspopup="true" aria-expanded="false">
             <i class="fa fa-envelope-o fa-lg"></i>
             <span ng-if="instantMessagesCount > 0" class="label label-success" style="position: absolute;top: 5px;">{{instantMessagesCount}}</span>
           </a>
@@ -56,8 +64,8 @@
           </ul>
         </li>
         <li class="dropdown" style="height:100%;">
-          <a class="dropdown-toggle" style="width:55px;padding-top:1.5vh;" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-            <i class="fa fa-bell fa-lg"></i>
+          <a class="dropdown-toggle" style="width:55px;padding-top:1.5vh;color:white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            <i class="fa fa-flag-o fa-lg"></i>
             <span ng-if="notificationsCount > 0" class="label label-warning" style="position: absolute;top: 5px;">{{notificationsCount}}</span>
           </a>
           <ul class="dropdown-menu navDropDownList">
@@ -69,18 +77,19 @@
                 </div>
               </ul>
             </li>
-            <a ng-click="openAllNotifications()" style="cursor:pointer;"><i class = "fa fa-external-link"></i> See All Notifications</a>
+            <a href="" ng-click="openAllNotifications()"><i class = "fa fa-external-link"></i> See All Notifications</a>
           </ul>
         </li>
       </ul> <!-- /. notification icons group -->
-      <div style="position:relative;padding-top:0.5vh;" ng-if="showMessaging">
+      <!-- ng-if="!isCustomer&&showw" -->
+      <div  style="position:relative;padding-top:0.5vh;">
         <form  class="navbar-form navbar-right" role="search" style="position:absolute;right:270px;">
-          <i style="margin:10px;" ng-click="terminal.show = !terminal.show;" class="fa fa-terminal noselect"></i>
+          <i style="color:white;" ng-click="terminal.show = !terminal.show;" class="fa fa-search fa-lg noselect"></i>
           <input ng-if="terminal.show" focus-me="terminal.show" type="text" class="form-control animated fadeIn" placeholder="Enter command" ng-enter="parseCommand()" ng-blur="closeTerminal()" ng-model = "terminal.command" style="width:500px;" uib-typeahead="user as getName(user) for user in userSearch($viewValue)">
           <div style="position:absolute;top:45px;background:white;width:87%;left:10%;padding:0px;" ng-if="terminal.showCommandOptions && terminal.show" class="card" >
             <ul class="nav-horizontal" style="background:white;">
               <li style="padding:10px;" class="text-center" ng-click="commandOptionsClicked('im')"><i class="fa fa-whatsapp fa-2x"></i> <br> Chat</li>
-              <li style="padding:10px;" class="text-center" ng-click="commandOptionsClicked('social')"><i class="fa fa-facebook fa-2x"></i> <br> Social</li>
+              <!-- <li style="padding:10px;" class="text-center" ng-click="commandOptionsClicked('social')"><i class="fa fa-facebook fa-2x"></i> <br> Social</li> -->
             </ul>
           </div>
         </form>
@@ -89,6 +98,6 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-<div ng-repeat="friend in imWindows">
+<div ng-repeat="friend in imWindows" >
   <chat-window friend-url="friend.url" pos="$index" id="chatWindow{{friend.username}}" cancel="closeIMWindow($index)"></chat-window>
 </div>
