before new design

--- a/employees/static/ngTemplates/app.employees.Attendance.html
+++ b/employees/static/ngTemplates/app.employees.Attendance.html
@@ -1,6 +1,6 @@
 <!-- this file is replacement for generic-calendar directive -->
 
-<div class="shaddowed card bg-white" style="min-height:93vh;position:relative;">
+<div class="" style="min-height:93vh;position:relative;">
   <breadcrumb></breadcrumb>
 
   <div class="container-fluid">
