--- a/finance/static/ngTemplates/app.finance.vendor.explore.html
+++ b/finance/static/ngTemplates/app.finance.vendor.explore.html
@@ -48,7 +48,7 @@
             <td width="20%">{{$index + 1 + vendorServiceData.length}}</td>
             <td width="40%"><input  ng-model="item.particular" type="text" class="form-control-pos"></td>
             <td width="30%">
-              <input type="number"  step=1 class="form-control-pos" ng-model="item.rate">
+              <input type="number"class="form-control-pos" ng-model="item.rate">
             </td>
             <td width="20%">
               <button type="button" class="btn btn-danger btn-sm" ng-click="deleteTable($index)"> <i class="fa fa-trash"></i> </button>
