--- a/organization/static/ngTemplates/app.organization.dash.html
+++ b/organization/static/ngTemplates/app.organization.dash.html
@@ -1,4 +1,4 @@
-<div class="shaddowed card bg-white" style="min-height:93vh;position:relative;">
+<div class="" style="min-height:93vh;position:relative;">
   <div class="container-fluid" style="padding:0px;">
     <breadcrumb></breadcrumb>
     <div class="row" style="background:#eeeeee;margin:0px;margin-top: -20px;padding:20px;">
