--- a/payroll/static/ngTemplates/app.payroll.salary.reportexplore.html
+++ b/payroll/static/ngTemplates/app.payroll.salary.reportexplore.html
@@ -10,7 +10,7 @@
       </div>
   </div>
 </div> -->
-<div class="col-md-12 " style="padding:10px" >
+<div class="col-md-12 " style="padding:10px">
   <table class="table table-striped">
     <thead>
       <tr>
@@ -19,18 +19,38 @@
         <th>TDS</th>
         <th>Total</th>
         <th ng-if="data.status=='approved'">Download</th>
+        <th ng-if="data.status=='submitted'">Save</th>
       </tr>
-    </thaed>
+      </thaed>
     <tbody>
-      <tr ng-repeat="a in data.payslips">
-        <td style="width:25.5%">{{a.user |  getName}}</td>
-        <td style="width:25.5%">{{a.amount}}</td>
-        <td style="width:25.5%">{{a.tds}}</td>
-        <td style="width:25.5%" >{{a.totalPayable}}</td>
-        <td ng-if="data.status=='approved'">
+      <tr ng-repeat="a in data.payslips" ng-if="data.status=='approved'">
+        <td style="width:22.5%">{{a.user |  getName}}</td>
+        <td style="width:22.5%">{{a.amount}}</td>
+        <td style="width:22.5%">{{a.tds}}</td>
+        <td style="width:22.5%">{{a.totalPayable}}</td>
+        <td>
           <div class="btn-group btn-group-sm">
-              <a style="cursor:pointer;" target="_blank" href="/api/payroll/getPayslip/?payslip={{a.user}}&report={{data.pk}}"><i  class="fa fa-download fa-3x text-right" ></i></a>
-            </div>
+            <a style="cursor:pointer;" target="_blank" href="/api/payroll/getPayslip/?payslip={{a.user}}&report={{data.pk}}"><i class="fa fa-download fa-3x text-right"></i></a>&nbsp;
+          </div>
+        </td>
+      </tr>
+
+      <tr ng-repeat="a in data.payslips" ng-if="data.status=='submitted'" ng-mouseover="open = true" ng-mouseleave="open = false">
+        <td style="width:22.5%">{{a.user |  getName}}</td>
+        {{edit[$index]}}
+        <td ng-if="!edit[$index]" style="width:22.5%">{{a.amount}}</td>
+        <td ng-if="!edit[$index]" style="width:22.5%">{{a.tds}}</td>
+        <td ng-if="!edit[$index]" style="width:22.5%">{{a.totalPayable}}</td>
+        <td ng-if="!edit[$index]">
+          <div ng-show="open">
+            <a style="cursor:pointer;" ng-click="editIndividualData($index)" ng-if="data.status=='submitted'"><i class="fa fa-pencil"></i></a>
+          </div>
+        </td>
+        <td ng-if="edit[$index]" style="width:22.5%"> <input class="form-control-pos" ng-model="a.amount"></td>
+        <td ng-if="edit[$index]" style="width:22.5%"> <input class="form-control-pos" ng-model="a.tds"></td>
+        <td ng-if="edit[$index]" style="width:22.5%"> <input class="form-control-pos" ng-model="a.totalPayable"></td>
+        <td ng-if="edit[$index]" style="width:22.5%">
+          <a style="cursor:pointer;" ng-click="saveIndividualData(a.pk,a.amount,a.tds,a.totalPayable,$index)" ng-if="data.status=='submitted'"><i class="fa fa-floppy-o"></i></a>
         </td>
       </tr>
     </tbody>
