--- a/PIM/static/ngTemplates/app.home.dashboard.html
+++ b/PIM/static/ngTemplates/app.home.dashboard.html
@@ -1,4 +1,4 @@
-<!-- <div class="shaddowed card bg-white" style="min-height:93vh;">
+<!-- <div class="" style="min-height:93vh;">
 
 <breadcrumb></breadcrumb>
 <div class="conainer" style="position:absolute">
@@ -40,7 +40,7 @@
 </div>
 
 </div> -->
-<div class="shaddowed card bg-white" style="min-height:93vh;position:relative;">
+<div class="" style="min-height:93vh;position:relative;">
 
   <breadcrumb></breadcrumb>
     <div class="container-fluid">
