--- a/performance/static/ngTemplates/app.performence.feedback.html
+++ b/performance/static/ngTemplates/app.performence.feedback.html
@@ -1,4 +1,4 @@
-<div class="shaddowed card bg-white" style="min-height:93vh;position:relative;">
+<div class="" style="min-height:93vh;position:relative;">
   <div class="container-fluid" style="padding:0px;">
     <breadcrumb></breadcrumb>
   <p style="text-align:center;padding-top:200px;">
