--- a/social/static/ngTemplates/app.social.html
+++ b/social/static/ngTemplates/app.social.html
@@ -1,4 +1,4 @@
-<div class="shaddowed card bg-white" style="min-height:93vh;overflow-x:hidden">
+<div class="" style="min-height:93vh;overflow-x:hidden">
   <breadcrumb></breadcrumb>
   <div class="container-fluid">
     <social-Profile user-Url="user"></social-Profile>
