--- a/warehouse/static/ngTemplates/app.warehouse.quote.form.html
+++ b/warehouse/static/ngTemplates/app.warehouse.quote.form.html
@@ -94,13 +94,13 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-6">
           <div class="form-group">
             <label>Quantity</label>
             <input type="number" step="0.5" class="form-control" ng-model="form.quantity">
           </div>
         </div>
-        <div class="col-md-3">
+        <!-- <div class="col-md-3">
           <div class="form-group">
             <label>Type</label> <br>
             <button class="btn btn-default btn-block dropdown-toggle" type="button" data-toggle="dropdown">
@@ -110,7 +110,7 @@
               <li ng-repeat="r in types" ng-click="setType(r)"><a href="">{{r | humanize}}</a></li>
             </ul>
           </div>
-        </div>
+        </div> -->
         <div class="col-md-6">
           <div class="form-group">
             <label>Amount</label>
