--- a/warehouse/static/ngTemplates/app.warehouse.contract.explore.html
+++ b/warehouse/static/ngTemplates/app.warehouse.contract.explore.html
@@ -93,7 +93,7 @@
     <div class="row" style="margin-top:10px;">
       <div class="container-fluid">
         <label class="text-muted">Requirements</label>
-        <span class="pull-right">Selected Area : {{contract.quantity * contract.areas.areaLength}} Sqft</span>
+        <span class="pull-right">Selected Area : {{contract.spaceGiven}} Sqft</span>
       </div>
     </div>
     <div class="row" style="margin-top:10px;margin-left:20px">
@@ -121,7 +121,8 @@
     </div>
     <div class="row" style="margin-top:10px;margin-left:20px">
       <div class="col-md-3">
-        <strong>Unit Type : </strong><span>{{contract.unitType}}</span>
+        <strong>Unit Type : </strong><span>{{contract.unitType}}</span><br/><br/>
+          <strong>Space Given : </strong><span>{{contract.spaceGiven}}</span>
       </div>
       <div class="col-md-3">
         <strong>Quantity : </strong><span>{{contract.quantity}}</span>
@@ -142,6 +143,7 @@
         <button type="button" class="btn btn-default btn-md pull-right" ng-click="addCommodity()"><i class="fa fa-plus"></i> Commodity</button>
       </div>
     </div>
+
     <div class="row">
       <div class="col-md-5" text-left>
     <span  style="margin-top:10px;margin-right:20px;">Inactive </span>
@@ -239,7 +241,7 @@
                   <th>Items</th>
                   <th>Created</th>
                   <th>Updated</th>
-                  <th>Status</th>
+                  <!-- <th>Status</th> -->
                   <th style="width:20%;"></th>
                 </tr>
               </thead>
@@ -250,23 +252,26 @@
                   <td>{{c.data.length}}</td>
                   <td>{{c.created | timeAgo}}</td>
                   <td>{{c.updated | timeAgo}}</td>
-                  <td>{{c.status | humanize}} <br>
+                  <!-- <td>{{c.status | humanize}} <br>
                     <span ng-if="c.status == 'billed'"> Due Date: {{c.dueDate | date : 'dd-MMM-yyyy'}}</span>
-                  </td>
+                  </td> -->
                   <td>
                     <div class="btn-group btn-group-sm pull-right">
-<!-- <<<<<<< HEAD
-                      <a ng-if="c.status != 'cancelled'" href="/api/warehouse/downloadInvoice/?contract={{contract.pk}}&invoice={{c.pk}}" class="btn btn-default" target="_blank"><i class="fa fa-download"></i></a>
-======= -->
                       <a ng-if="c.status != 'cancelled'" href="/api/warehouse/downloadInvoice/?contract={{contract.pk}}&inoicePk={{c.pk}}" class="btn btn-default" target="_blank"><i class="fa fa-download"></i></a>
-<!-- >>>>>>> 20c361fdeb1f8a000ef15776e239c2834a00463c -->
                       <button ng-if="c.status != 'cancelled'" type="button" class="btn btn-default" ng-click="editQuote($index)">
                         <i class="fa fa-pencil"></i>
                       </button>
-                      <!-- <button type="button" class="btn btn-info" ng-click="sendNotification($index)" ng-if="['billed' , 'received', 'dueElapsed'].indexOf(c.status) != -1">
-                        <i class="fa fa-envelope-o"></i>
-                      </button> -->
-                      <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                      <button type="button" class="btn btn-default" mwl-confirm
+                        title="Confirm"
+                        message="Are you sure?"
+                        confirm-text="Yes <i class='fa fa-check'></i>"
+                        cancel-text="No"
+                        on-confirm="deleteInvoiceData(c.pk,$index)"
+                        confirm-button-type="danger"
+                        cancel-button-type="default">
+                        <i class="fa fa-trash"></i>
+                      </button>
+                      <!-- <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
                         Change status <span class="caret"></span></button>
                       <ul class="dropdown-menu" role="menu">
                         <li><a href="" ng-click="changeStatus('quoted', $index)">Quoted</a></li>
@@ -275,7 +280,7 @@
                         <li><a href="" ng-click="changeStatus('received', $index)">Received</a></li>
                         <li><a href="" ng-click="changeStatus('cancelled', $index)">Cancelled</a></li>
                         <li><a href="" ng-click="changeStatus('dueElapsed', $index)">Due Elapsed</a></li>
-                      </ul>
+                      </ul> -->
                     </div>
                   </td>
                 </tr>
