--- a/warehouse/static/ngTemplates/app.warehouse.space.explore.html
+++ b/warehouse/static/ngTemplates/app.warehouse.space.explore.html
@@ -10,11 +10,12 @@
       <div class="form-group">
         <label><b>Code : </b> </label> {{form.code}}
       </div>
-      <div class="form-group">
+      <!-- <div class="form-group">
         <label><b>Area Per Box : </b> </label> {{form.areaLength}} Sqft
-      </div>
+      </div> -->
       <div class="form-group">
-        <label><b>Available Area : </b> </label> {{totalBoxes * form.areaLength}} Sqft
+        <!-- <label><b>Available Area : </b> </label> {{totalBoxes * form.areaLength}} Sqft -->
+        <label><b>Available Area : </b> </label> {{remainingSpace}} Sqft
       </div>
       <div class="form-group">
         <label>Area</label>
@@ -31,7 +32,8 @@
           <div style="border:1px solid {{data.color}} ; height:30px;width:40px ;background-color:{{data.color}}"></div>
         </div>
         <div class="col-md-9" style="padding-left:0px">
-          <b>{{data.company}} ( {{data.seletedBoxes * form.areaLength}} Sqft )</b>
+          <!-- <b>{{data.company}} ( {{data.seletedBoxes * form.areaLength}} Sqft )</b> -->
+          <b>{{data.company}} ( {{data.space}} Sqft )</b>
         </div><hr>
       </div>
     </div>
