--- a/warehouse/static/ngTemplates/app.warehouse.space.form.html
+++ b/warehouse/static/ngTemplates/app.warehouse.space.form.html
@@ -1,6 +1,10 @@
 <div ng-controller="businessManagement.warehouse.space.form">
   <div class="container-fluid">
-    <h3 ng-if="mode == 'edit'">Edit Space : <strong>{{form.name}}</strong> <span class="pull-right">Available Area : <strong>{{totalBoxes * form.areaLength}} Sqft</strong></span></h3>
+    <h3 ng-if="mode == 'edit'">Edit Space : <strong>{{form.name}}</strong> <span class="pull-right">
+      <!-- Available Area : <strong>{{totalBoxes * form.areaLength}} Sqft</strong> -->
+      Available Area : <strong>{{remainingSpace}} Sqft</strong>
+
+    </span></h3>
     <h3 ng-if="mode == 'new'">Create a new Space</h3>
 
   </div>
@@ -17,9 +21,13 @@
           <canvas id="canvas{{id}}{{modeType}}" height=1200 width=1200></canvas>
         </div>
       </div>
-      <div class="form-group">
+      <!-- <div class="form-group">
         <label>Area Per Box ( In Sqft )</label>
         <input type="number" class="form-control" ng-model="form.areaLength" min="1">
+      </div> -->
+      <div class="form-group">
+        <label>Area</label>
+        <input type="text" class="form-control" ng-model="form.totalArea" min="1">
       </div>
       <div class="form-group">
         <label>Code</label>
@@ -41,7 +49,9 @@
           <div style="border:1px solid {{data.color}} ; height:30px;width:40px ;background-color:{{data.color}}"></div>
         </div>
         <div class="col-md-9" style="padding-left:0px">
-          <b>{{data.company}} ( {{data.seletedBoxes * form.areaLength}} Sqft )</b>
+          <!-- <b>{{data.company}} ( {{data.seletedBoxes * form.areaLength}} Sqft )</b> -->
+            <b>{{data.company}} ( {{data.space}} Sqft )</b>
+
         </div><hr>
       </div>
     </div>
