--- a/support/static/ngTemplates/app.customers.explore.html
+++ b/support/static/ngTemplates/app.customers.explore.html
@@ -72,9 +72,10 @@
       </div>
     </div>
       </div>
+      <div style="margin-top:10px" class="col-md-8">
+        <users-Field data="myAdvisors" url="/api/HR/users/" col="4" label="Advisors"></users-Field>
+      </div>
 
-      <!-- <div class="row" style="margin-top:10px;" ng-if="compDetails.contactPerson.pk!=none">
-      </div> -->
     </div>
     <div class="col-md-4">
       <span class="text-center"><h3>Supports</h3></span>
