--- a/static_shared/ngTemplates/chatBox.html
+++ b/static_shared/ngTemplates/chatBox.html
@@ -8,7 +8,7 @@
             </div>
           </div>
           <div class="col-md-4" style="padding:0px">
-            <div class="btn btn-warning btn-sm btn-block" type="button" style="border-radius:0px !important;" name="button" mwl-confirm title="Close Chat" message="Are you sure?" data-placement="bottom" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="chatTransfer(data.uid,data.chatThreadPk)"
+            <div class="btn btn-warning btn-sm btn-block" type="button" style="border-radius:0px !important;" name="button" mwl-confirm title="Transfer Chat" message="Are you sure?" data-placement="bottom" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="chatTransfer(data.uid,data.chatThreadPk)"
               confirm-button-type="default" cancel-button-type="default"><i style="font-size:30px" class="fa fa-user-o" aria-hidden="true"></i>
               <i style="font-size:16px" class="fa fa-exchange" aria-hidden="true"></i>
               <i style="font-size:35px" class="fa fa-user" aria-hidden="true"></i>
@@ -46,13 +46,15 @@
     <!-- <button type="button" ng-click="takeSnapshot()" class="btn btn-default">
       snap
     </button> -->
-    <div ng-if="data.video" class="container-fluid" style="height:20vh; padding:0px;" ng-init="setHeight()">
+    <div ng-if="data.video" class="container-fluid" style="{{data.isVideoShowing&&isVisitorVideoShowing?'height:20vh':'height:2.8vh'}} ;transition:.5s; padding:0px;" ng-init="setHeight()">
       <!-- <span style="position:absolute; right:7px; top:3px; background-color:black; padding:3px;"><i class="fa fa-times-circle"></i></span> -->
       <!-- {{data.video}}
       {{data.videoUrl}} -->
       <i style="position:absolute; right:10px; top:125px; color:#fff; cursor:pointer;" ng-click="captureImage()" class="fa fa-camera fa-lg" aria-hidden="true"></i>
       <i style="position:absolute; right:40px; top:125px; color:#fff; cursor:pointer;" ng-click="hideVisitorScreen()" class="fa fa-compress fa-lg" aria-hidden="true"></i>
-      <iframe id="iframeChat{{data.uid}}" ng-src="{{data.videoUrl | trusted}}" scrolling="no" style="height:100%; width:100%; border:1px solid #e0e0e0;" allowFullScreen></iframe>
+      <i style="position:absolute; right:70px; top:125px; color:#fff; cursor:pointer;" ng-click="toggleVisitorScreen()" class="fa fa-video-camera fa-lg" aria-hidden="true"></i>
+      <iframe id="iframeChat{{data.uid}}" ng-src="{{data.videoUrl | trusted}}" scrolling="no" style="height:100%; transition:0.5s;width:100%; border:1px solid #e0e0e0;" allowFullScreen></iframe>
+
     </div>
     <div ng-if="data.audio" class="container-fluid" style="height:5vh; padding:0px;" ng-init="setHeight()">
       {{setHeight()}}
@@ -135,7 +137,7 @@
     <div class="row" style="margin:0px;margin-top:10px;margin-bottom:5px;padding-top:10px;padding-bottom:10px;">
       <span class="uibTypeaheadDropup">
         <!-- <input ng-if="chatBox.fileToSend.size==0" type="text" class="col-md-9" ng-enter="send()" placeholder="Message" ng-model="chatBox.messageToSend" uib-typeahead="cannedRes.text as cannedRes.text for cannedRes in searchCannedRes($viewValue)" data-placement="top" style="border:none;outline:none;background-color:white;"> -->
-        <textarea ng-if="chatBox.fileToSend.size==0" class="col-md-9" rows="1" cols="80" style="border:none; outline:none; resize:none; background-color:#fff;" ng-model="chatBox.messageToSend" uib-typeahead="cannedRes.text as cannedRes.text for cannedRes in searchCannedRes($viewValue)" placeholder="Message" ></textarea>
+        <textarea ng-keydown="textAreaBehavior($event)" ng-if="chatBox.fileToSend.size==0" class="col-md-9" rows="3" cols="80" style="border:none; outline:none; resize:none; background-color:#fff;" ng-model="chatBox.messageToSend" uib-typeahead="cannedRes.text as cannedRes.text for cannedRes in searchCannedRes($viewValue)" placeholder="Message" ></textarea>
       </span>
 
       <input type="file" id="filePickerChat{{index}}" style="display:none;" file-model="chatBox.fileToSend">
