--- a/support/static/ngTemplates/app.customer.chat.modal.html
+++ b/support/static/ngTemplates/app.customer.chat.modal.html
@@ -7,9 +7,9 @@
       <div class="form-group">
         <label>Email</label>
         <div class="input-group">
-          <input type="email" class="form-control" ng-model="checkinForm.manufacturedOn" placeholder="Please Enter Email ..."/>
+          <input type="email" class="form-control" ng-model="emailAddress" placeholder="Please Enter Email ..."/>
           <span class="input-group-btn">
-            <button type="button" class="btn btn-success" ng-click="">Send &nbsp;<i class="fa fa-paper-plane-o"></i></button>
+            <button type="button" class="btn btn-success" ng-click="sendEmail()">Send &nbsp;<i class="fa fa-paper-plane-o"></i></button>
           </span>
         </div>
       </div>
