--- a/support/static/ngTemplates/app.reviews.explore.html
+++ b/support/static/ngTemplates/app.reviews.explore.html
@@ -19,7 +19,7 @@
         <span ng-if="chatThreadData.uid!=none"><h3><strong>Status : </strong>{{chatThreadData.status}} <span class="pull-right"><div class="btn btn-primary" ng-click="showChart()">Change Status</div></span></h3></span><hr>
         <div class="row" ng-repeat="msg in data">
           <!-- <h3>{{msg.message}}</h3> -->
-          <div class="row container-fluid" style="float:{{msg.sentByAgent ? 'right; background-color:#dba4ae; ':'left; background-color:#72b3d4;'}} padding:10px;margin:8px;border-radius:{{msg.sentByAgent ? '20px 0px 20px 20px':'0px 20px 20px 20px'}};">
+          <div ng-if="!msg.logs" class="row container-fluid" style="float:{{msg.sentByAgent ? 'right; background-color:#dba4ae; ':'left; background-color:#72b3d4;'}} padding:10px;margin:8px;border-radius:{{msg.sentByAgent ? '20px 0px 20px 20px':'0px 20px 20px 20px'}};">
             <p ng-if="msg.message.length>0 && msg.attachmentType != 'youtubeLink'" style="word-break: break-all !important;">
               <h4>{{msg.message}}</h4></p>
             <img ng-if="msg.attachmentType == 'image'" ng-src="{{msg.file}}" style="width:250px;">
@@ -30,7 +30,7 @@
               <iframe width="100%" height="215" ng-src="{{msg.message | trusted}}" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
-          <div class="row container-fluid" style="{{msg.sentByAgent ? 'padding-right:30px' : 'padding-left:30px'}};">
+          <div ng-if="!msg.logs" class="row container-fluid" style="{{msg.sentByAgent ? 'padding-right:30px' : 'padding-left:30px'}};">
             <span ng-if="msg.sentByAgent" style="clear:both;float:{{msg.sentByAgent ? 'right':'left'}};  font-size:11px; " class="text-muted" ng-init="cal = calculateTime(data[$index-1].created , msg.created)">{{msg.created | date : 'hh:mm:a' }} , {{cal}}</span>
             <span ng-if="!msg.sentByAgent" style="clear:both;float:{{msg.sentByAgent ? 'right':'left'}};  font-size:11px; " class="text-muted">{{msg.created | date : 'hh:mm:a' }}</span>
           </div>
