--- a/ecommerce/static/ngTemplates/app.ecommerce.search.typehead.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.search.typehead.html
@@ -6,8 +6,11 @@
       </div>
       <div class="col-xs-6">
         <span ng-bind-html="match.label | uibTypeaheadHighlight:query"></span>
-        <span ng-if="match.model.howMuch==null">{{match.model.howMuch}}{{match.model.unit | getUnit}}</span>
-        <span ng-if="match.model.howMuch!=null">{{match.model.howMuch | convertUnit :match.model.unit}} </span>
+        <span ng-if="match.model.unit == 'Size and Color' || match.model.unit == 'Size'"> {{match.model.unitPerpack | convertSize: match.model.unit}} {{match.model.prodDesc}} </span>
+        <span ng-if="match.model.unit != 'Size and Color' && match.model.unit != 'Size'">
+          <span ng-if="match.model.howMuch==null">{{match.model.howMuch}}{{match.model.unit | getUnit}}</span>
+          <span ng-if="match.model.howMuch!=null">{{match.model.howMuch | convertUnit :match.model.unit}} </span>
+        </span>
         <!-- <ul  ng-if="match.model.prodVar.length>0">
           <li ng-repeat="a in match.model.prodVar">{{a.sku}}</li>
         </ul> -->
