--- a/HR/static/ngTemplates/app.HR.manage.users.items.html
+++ b/HR/static/ngTemplates/app.HR.manage.users.items.html
@@ -5,10 +5,10 @@
         <div class="row" style="border-bottom: 1px solid #dedede;">
           <div class="col-md-4" style="padding:0px;">
             <img style="width: 120px;height:120px;" class="img" ng-if="data.profile.displayPicture != null" ng-src="{{data.profile.displayPicture}}">
-            <img style="width: 120px;height:120px;" class="img" ng-if="data.profile.displayPicture == null" src="/static/images/userIcon.png">
+            <img style="width: 120px;height:120px;" class="img" ng-if="data.profile.displayPicture == null" src="{{data.profile.gender=='M'? '/static/images/maleAvatar.png':'/static/images/femaleAvatar.png'}}">
           </div>
           <div class="col-md-8" style="position:relative;display:block;">
-            <div class="row" style="padding-left:10px;">
+            <div class="" style="padding-left:10px;">
               <h3>{{data.first_name + ' ' + data.last_name}}</h3>
               <span class="text-muted" style="position:absolute; top:10px;right:10px;">
                 <i class="fa fa-hashtag"></i> <span style="font-size:14px;">{{data.pk}}</span>
@@ -16,6 +16,7 @@
             </div>
           </div>
         </div>
+
         <div class="row container-fluid" style="padding-top:20px;height:70px;border-bottom: 1px solid #dedede">
           <div class="container-fluid">
             <span ng-if="data.profile.mobile != null"><strong><i style="width:30px;" class="fa fa-mobile"></i> </strong>{{data.profile.mobile}}</span> <br>
