--- a/static_shared/ngTemplates/chatBox.html
+++ b/static_shared/ngTemplates/chatBox.html
@@ -54,6 +54,7 @@
       <i style="position:absolute; right:40px; top:125px; color:#fff; cursor:pointer;" ng-click="hideVisitorScreen()" class="fa fa-compress fa-lg" aria-hidden="true"></i>
       <i style="position:absolute; right:70px; top:125px; color:#fff; cursor:pointer;" ng-click="toggleVisitorScreen()" class="fa fa-video-camera fa-lg" aria-hidden="true"></i>
       <iframe id="iframeChat{{data.uid}}" ng-src="{{data.videoUrl | trusted}}" scrolling="no" style="height:100%; transition:0.5s;width:100%; border:1px solid #e0e0e0;" allowFullScreen></iframe>
+      <!-- <iframe ng-src="{{data.currentUrl | trusted}}" scrolling="no" style="height:100%; transition:0.5s;width:100%; border:1px solid #e0e0e0;" allowFullScreen></iframe> -->
 
     </div>
     <div ng-if="data.audio" class="container-fluid" style="height:5vh; padding:0px;" ng-init="setHeight()">
